# vksplat

./: .gitignore  CMakeLists.txt  README.md
binding/: binding.cc
binding/splatstream/: renderer.py
inspector/: CMakeLists.txt  inspector.cc
inspector/assets/: README.md
src/api/include/vkgs/: draw_options.h
src/api/src/: renderer.cc
src/core/include/vkgs/core/: draw_options.h  renderer.h
src/core/shader/: splat.frag
src/core/src/: graphics_storage.cc  graphics_storage.h  renderer.cc  struct.h
src/gpu/: CMakeLists.txt
src/gpu/include/vkgs/gpu/: device.h  graphics_pipeline.h
src/gpu/src/: device.cc  graphics_pipeline.cc  image.cc
src/viewer/: CMakeLists.txt
src/viewer/include/vkgs/viewer/: gui.h  swapchain.h  viewer.h
src/viewer/include/vkgs/viewer/gui/: font.h  stats_panel.h  svg.h  title_screen.h
src/viewer/src/: gui.cc  swapchain.cc  viewer.cc
src/viewer/src/gui/: font.cc  imgui_software_renderer.h  stats_panel.cc  svg.cc  title_screen.cc
tools/: install_mac_viewer_app.sh
